--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,8 @@
 body {
-    background-color: white;
+    background-color: silver;
     padding-top: 20px;
     font-family: cursive;
-    color: silver;
-
-    background: url('../images/bgimage.jpg') no-repeat;
+    color: blue;
     background-size: cover;
 }
 .container { 
@@ -12,12 +10,12 @@ body {
     
 }
 
-h1,h2,h3,
-h4,h5,h6 {
-    padding: 5px;
+h1,h2,p {
+    padding: 12px;
     color: blue;
     background-color: silver;
 }
+
 #title-image, #gameover-image, #youwin-image{ 
     display: block;
     margin: 25px auto;
@@ -27,15 +25,16 @@ h4,h5,h6 {
     letter-spacing: 10px;
 }
 
-#reset, 
+#tryAgain, 
 #gameover-image, 
 #youwin-image { 
     display: none;}
     
 .content-column {
     padding-top: 20px;
-    border: 3px double silver;
+    border: 5px double blue;
     text-align: center;
+    font-size: 25px;
     margin-top: 20px;
     min-height: 500px;
     background-color: silver;
